--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ pytz==2025.2
 six==1.17.0
 tzdata==2025.2
 urllib3==2.4.0
+openmeteo_requests >= 1.4.0
+openmeteo_sdk >= 1.20.0
+requests-cache >= 1.2.1
+retry-requests >= 2.0.0
