--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      - name: Print environment variable
+        run: echo "${{ vars.WEATHER_API_COM_KEY }}"
       - name: Checkout repo content
         uses: actions/checkout@v4
       - name: Setup Python
