--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,20 @@ jobs:
   simple-etl:
     runs-on: ubuntu-latest
     environment: production
+    env:
+      meteoblue_api_key: ${{ secrets.meteoblue_api_key }}
+      WEATHER_API_COM_KEY: ${{ secrets.WEATHER_API_COM_KEY }}
+      GOOGLE_SHEET_ID: ${{ secrets.GOOGLE_SHEET_ID }}
+      PGHOST: ${{ secrets.PGHOST }}
+      PGDATABASE: ${{ secrets.PGDATABASE }}
+      PGUSER: ${{ secrets.PGUSER }}
+      PGPASSWORD: ${{ secrets.PGPASSWORD }}
+      ENDPOINT: ${{ secrets.ENDPOINT }}
     steps:
       - name: Print environment variable
         run: echo "${{ vars.WEATHER_API_COM_KEY }}"
+      - name: Print environment variables
+        run: env
       - name: Checkout repo content
         uses: actions/checkout@v4
       - name: Setup Python
