--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload to S3
         run: |
           pip install awscli
-          aws s3 cp ./data/ s3://weather-data-myanmar/ --recursive
+          aws s3 cp ./output/ s3://${{secrets.AWS_S3_BUCKET_NAME}}/ --recursive
 
       - name: Upload to Neon PostgreSQL
         run: python load_to_db.py
