--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: "0 8 * * *" ## Trigger on every day at 8:00 UTC
 
-  workflow_dispatch:
+  workflow_dispatch: # manual trigger
 
 permissions:
   contents: write
