--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - ".github/workflows/main.yml"
   schedule:
-    - cron: "0 8 * * *" ## Trigger on every day at 8:00 UTC
+    - cron: "0 1 * * *" ## Trigger on every day at 1:00 UTC | 8:00 AM Thailand
 
   workflow_dispatch: ## manual trigger
 
@@ -15,95 +15,21 @@ permissions:
   contents: write
 
 jobs:
-  ambient-job:
+  extract:
     runs-on: ubuntu-latest
     environment: production
-    env:
-      PGHOST: ${{ secrets.PGHOST }}
-      PGDATABASE: ${{ secrets.PGDATABASE }}
-      PGUSER: ${{ secrets.PGUSER }}
-      PGPASSWORD: ${{ secrets.PGPASSWORD }}
-      ENDPOINT: ${{ secrets.ENDPOINT }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-    steps:
-      - name: Checkout repo content
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-          cache: "pip"
-      - name: 📦 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    strategy:
+      matrix:
+        source:
+          [
+            extract_ambient.py,
+            extract_meteoblue.py,
+            extract_openmeteo.py,
+            extract_weatherapi.py,
+          ]
 
-      - name: Ambient
-        run: python task_ambient.py
-
-  meteoblue-job:
-    runs-on: ubuntu-latest
-    environment: production
     env:
       METEOBLUE_API_KEY: ${{ secrets.METEOBLUE_API_KEY }}
-      PGHOST: ${{ secrets.PGHOST }}
-      PGDATABASE: ${{ secrets.PGDATABASE }}
-      PGUSER: ${{ secrets.PGUSER }}
-      PGPASSWORD: ${{ secrets.PGPASSWORD }}
-      ENDPOINT: ${{ secrets.ENDPOINT }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-    steps:
-      - name: Checkout repo content
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-          cache: "pip"
-      - name: 📦 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Meteoblue
-        run: python task_meteoblue.py
-
-  openmeteo-job:
-    runs-on: ubuntu-latest
-    environment: production
-    env:
-      PGHOST: ${{ secrets.PGHOST }}
-      PGDATABASE: ${{ secrets.PGDATABASE }}
-      PGUSER: ${{ secrets.PGUSER }}
-      PGPASSWORD: ${{ secrets.PGPASSWORD }}
-      ENDPOINT: ${{ secrets.ENDPOINT }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-    steps:
-      - name: Checkout repo content
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-          cache: "pip"
-      - name: 📦 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Openmeteo
-        run: python task_openmeteo.py
-
-  weather_api-job:
-    runs-on: ubuntu-latest
-    environment: production
-    env:
       WEATHER_API_COM_KEY: ${{ secrets.WEATHER_API_COM_KEY }}
       PGHOST: ${{ secrets.PGHOST }}
       PGDATABASE: ${{ secrets.PGDATABASE }}
@@ -113,18 +39,22 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
     steps:
       - name: Checkout repo content
         uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
           cache: "pip"
+
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: WeatherAPI
-        run: python task_weatherapi.py
+      - name: run extract scripts
+        run: |
+          python ${{ matrix.source }}
