--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,3 +58,38 @@ jobs:
       - name: run extract scripts
         run: |
           python ${{ matrix.source }}
+
+      - name: upload artifact output csv files
+        uses: actions/upload-artifact@v4
+        with:
+          name: csv-artifact
+          path: ./output/*
+
+  load:
+    runs-on: ubuntu-latest
+    needs: extract
+    environment: production
+
+    steps:
+      - name: Checkout repo content
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+
+      - name: 📦 Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: download csv files artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: csv-artifact
+          path: ./output
+      - name: load data to postgres
+        run: |
+          python load_files_to_db.py
