--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: csv-artifact
-          path: ./output/*
+          path: |
+            ./output/*
+            !./output/mimu_townships.csv
 
-  load:
+  load-to-db:
     runs-on: ubuntu-latest
     needs: extract
     environment: production
