--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,6 @@ jobs:
     env:
       METEOBLUE_API_KEY: ${{ secrets.METEOBLUE_API_KEY }}
       WEATHER_API_COM_KEY: ${{ secrets.WEATHER_API_COM_KEY }}
-      PGHOST: ${{ secrets.PGHOST }}
-      PGDATABASE: ${{ secrets.PGDATABASE }}
-      PGUSER: ${{ secrets.PGUSER }}
-      PGPASSWORD: ${{ secrets.PGPASSWORD }}
-      ENDPOINT: ${{ secrets.ENDPOINT }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
@@ -86,6 +81,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: extract
     environment: production
+
+    env:
+      PGHOST: ${{ secrets.PGHOST }}
+      PGDATABASE: ${{ secrets.PGDATABASE }}
+      PGUSER: ${{ secrets.PGUSER }}
+      PGPASSWORD: ${{ secrets.PGPASSWORD }}
+      ENDPOINT: ${{ secrets.ENDPOINT }}
 
     steps:
       - name: Checkout repo content
