--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Myanmar Weather ETL Pipeline
+name: Myanmar Weather ELT Pipeline
 
 on:
   push:
@@ -77,7 +77,7 @@ jobs:
             ./output/weatherapi_forecast.csv
           if-no-files-found: ignore
 
-  load-to-db:
+  load:
     runs-on: ubuntu-latest
     needs: extract
     environment: production
