--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ permissions:
   contents: write
 
 jobs:
-  extract:
+  Extract:
     runs-on: ubuntu-latest
     environment: production
     strategy:
@@ -83,9 +83,9 @@ jobs:
             ./output/weatherapi_forecast.csv
           if-no-files-found: ignore
 
-  load:
+  Load:
     runs-on: ubuntu-latest
-    needs: extract
+    needs: Extract
     environment: production
 
     env:
