--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,3 +134,20 @@ jobs:
       - name: load data to postgres
         run: |
           python load_files_to_db.py
+  transform:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.8"
+      - name: Install dbt dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install dbt-core
+      - name: Run dbt models
+        run: dbt debug --profiles-dir . --project-dir ./transform
+        env:
+          DBT_PROFILES_DIR: ${{ secrets.DBT_PROFILES_DIR }}
