--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,7 +148,7 @@ jobs:
       - name: Install dbt dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install dbt-core
+          pip install dbt-core dbt-postgres
       - name: Run dbt models
         run: dbt debug --profiles-dir ./transform --project-dir ./transform
         env:
