--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,14 +145,23 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.8"
+          python-version: "3.12"
+          cache: "pip"
+
       - name: Install dbt dependencies
         run: |
           python -m pip install --upgrade pip
           pip install dbt-core dbt-postgres
+
+      - name: Debug dbt models
+        run: dbt debug --profiles-dir ./transform --project-dir ./transform
+        env:
+          DBT_PROFILES_DIR: ${{ secrets.DBT_PROFILES_DIR }}
+
       - name: Run dbt models
         run: dbt debug --profiles-dir ./transform --project-dir ./transform
         env:
